[package]
name = "hydragrow-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime & Utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"

# Web Server (Actix)
actix-web = "4.4"
actix-ws = "0.2"     # Modern WebSocket implementation cho Actix
futures-util = "0.3" # Hỗ trợ stream cho WS

# Database: InfluxDB
influxdb2 = "0.3"

# MQTT
rumqttc = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
] }
tracing = "0.1"
# Logging / Tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
influxdb2-structmap = "0.2.0"
num-traits = "0.2.19"
env_logger = "0.11.9"

reqwest = { version = "0.13.2", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
validator = { version = "0.20.0", features = ["derive"] }
