[package]
name = "hydragrow-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime & Utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"

# Web Server (Actix)
actix-web = "4.4"
actix-ws = "0.2"
futures-util = "0.3"

# Database: InfluxDB

# MQTT (Đã tắt TLS mặc định, dùng native)
rumqttc = { version = "0.24.0", default-features = false, features = [
  "use-native-tls",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "tls-rustls",
  "macros",
  "chrono",
] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num-traits = "0.2.19"
env_logger = "0.11.9"

# HTTP Client (Đã lùi về 0.11 để chơi chung với Solana)
reqwest = { version = "0.11", features = ["json"] }

# Crypto & Validation
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Solana
validator = { version = "0.20.0", features = ["derive"] }
solana-client = "2.0.9"
solana-sdk = "2.0.9"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"

yup-oauth2 = "8.3"

uuid = { version = "1.0", features = ["v4"] }
